tests/analyzer/errors/match_num.ray
fn getValue() -> int { return 5 }

fn main() {
    let value = 2

    print match value {
        0 => 10
        2 => 30
        2 => 3
    }

    print match value {
        0 => 10
        1 => 20
        4 => 30
        2..6 => 40
        _ => 50
    }

    print match value {
        0 => 10
        1 => 20
    }
    
    print match value {
        getValue() => 10
        1 => 20
    }

    print match value {
        -5 => -10
        -8..-2 => 20
        _ => 100
    }

    print match value {
        -8..-2 => 20
        -5 => -10
        _ => 100
    }

    match value {
        5..2 => {}
    }

    match value {
        -5..-20 => {}
    }

    match value {
        -1.2 => {}
        _ => {}
    }

    // float
    let fvalue = 2.5

    match fvalue {
        1.2..4.5 => {}
        3.0..6.7 => {}
        _ => {}
    }

    match fvalue {
        1.2..4.5 => {}
        2.0 => {}
        _ => {}
    }

    match fvalue {
        2.0 => {}
    }

    match fvalue {
        -1.2..-2.5 => {}
        _ => {}
    }

    match fvalue {
        getValue() => {}
        _ => {}
    }

    match fvalue {
        not 4.5 => {}
        _ => {}
    }

    match value {
        -true => {}
        _ => {}
    }

    match fvalue {
        -1 => {}
        _ => {}
    }
}

